--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Continuous Evolution</title>
 </head>
+
 <body>
+
+    <header>
+        <img src="assets/images/header/Logo.webp" alt="Logo Continuous Evolution">
+    </header>
     
+    <main>
+        <h2>De l’époque des dinosaures à notre futur, le site qui retrace l’évolution du monde</h2>
+        <h1>Continuous Evolution</h1>
+        <h3>6 thèmes 6 articles 6 expériences Une seule évolution</h3>
+    </main>
 </body>
 </html>
