--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h2>De l’époque des dinosaures à notre futur, le site qui retrace l’évolution du monde</h2>
         <h1>Continuous Evolution</h1>
         <h3>6 thèmes 6 articles 6 expériences Une seule évolution</h3>
+        <p>Bienvenue sur “Continuous Evolution”. Ce site a pour thématique l’évolution et le changement. Il va vous faire voyager à travers les dernières années à travers 6 expériences présentées par ordre chronologique. Ces expériences sont des articles qui vont vous faire prendre conscience du changement continu du monde dans lequel on vit.</p>
     </main>
 </body>
 </html>
