--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         <h1>Continuous Evolution</h1>
         <h3>6 thèmes 6 articles 6 expériences Une seule évolution</h3>
         <p>Bienvenue sur “Continuous Evolution”. Ce site a pour thématique l’évolution et le changement. Il va vous faire voyager à travers les dernières années à travers 6 expériences présentées par ordre chronologique. Ces expériences sont des articles qui vont vous faire prendre conscience du changement continu du monde dans lequel on vit.</p>
+        
+        <article>
+            <h4>Pacific Rim</h4>
+            <img src="assets/images/articles/pacific_rim/pacific_rim_main.webp" alt="Jaeger de Pacific Rim">
+            <p>Pacific Rim est un blockbuster américain sorti le 17 juillet 2013 dans les salles de cinéma en France. C’est un film de science-fiction apocalyptique... </p>
+            <p>Lire la suite</p>
+        </article>
     </main>
 </body>
 </html>
