--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
     
     <main>
+
         <h2>De l’époque des dinosaures à notre futur, le site qui retrace l’évolution du monde</h2>
         <h1>Continuous Evolution</h1>
         <h3>6 thèmes 6 articles 6 expériences Une seule évolution</h3>
@@ -22,9 +23,17 @@
         <article>
             <h4>Pacific Rim</h4>
             <img src="assets/images/articles/pacific_rim/pacific_rim_main.webp" alt="Jaeger de Pacific Rim">
-            <p>Pacific Rim est un blockbuster américain sorti le 17 juillet 2013 dans les salles de cinéma en France. C’est un film de science-fiction apocalyptique... </p>
+            <p>Pacific Rim est un blockbuster américain sorti le 17 juillet 2013 dans les salles de cinéma en France. C’est un film de science-fiction apocalyptique...</p>
             <p>Lire la suite</p>
         </article>
+
+        <article>
+            <h4>Champ de tir d’Alamogordo</h4>
+            <img src="assets/images/articles/alamogordo/alamogordo_main.webp" alt="champ de tir d'Alamogordo">
+            <p>Le champ de tir d’Alamogordo se situe au Nouveau-Mexique, près de la ville de Socorro. Ce lieu n’est pas très connu pourtant...</p>
+            <p>Lire la suite</p>
+        </article>
+
     </main>
 </body>
 </html>
